<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_italy_stats"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_italy_stats" />

    <item
        android:id="@+id/navigation_world_stats"
        android:icon="@drawable/ic_world_24"
        android:title="@string/title_world_stats" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_baseline_markunread_mailbox_24"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_about_info_24"
        android:title="@string/title_about" />

</menu>